--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 "link":"https://www.youtube.com/watch?v=VwRSpN3bE4k&t=36s", 
 "link2":"https://www.youtube.com/watch?v=VwRSpN3bE4k&t=36s", 
 "toast":"ATUALIZE A SUA TV  !!  ;",
+"website":" ",
+"youtube":" ",
+"politica":" ",
+"termos":" ",
+"contato":" ",
+"share":" ",
 "espnome":"esp Name " 
 }
 ]
