--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 "link":"https://www.youtube.com/watch?v=VwRSpN3bE4k&t=36s", 
 "link2":"https://www.youtube.com/watch?v=VwRSpN3bE4k&t=36s", 
 "toast":"ATUALIZE A SUA TV  !!  ;",
-"website":" ",
-"youtube":" ",
-"politica":" ",
-"termos":" ",
-"contato":" ",
-"e-mail":" ",
+"website":"https://www.jogadorcaro.online/",
+"youtube":"https://www.youtube.com/@BIBILMods/",
+"politica":"https://www.jogadorcaro.online/2023/01/politica-de-privacidade-bibil-mods.html",
+"termos":"https://www.jogadorcaro.online/p/termos-de-uso.html",
+"contato":"https://contate.me/bibiltvnews",
+"e-mail":"Gabriel.news@gmail.com",
 "share":" ",
 "espnome":"esp Name " 
 }
