--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 "youtube":"https://www.youtube.com/@BIBILMods/",
 "politica":"https://www.jogadorcaro.online/2023/01/politica-de-privacidade-bibil-mods.html",
 "termos":"https://www.jogadorcaro.online/p/termos-de-uso.html",
-"contato":"https://contate.me/bibiltvnews",
+"contato":"https://wa.me/5561994346257?text=Ol%C3%A1+vi+seu+aplicativo+de+tv+%3A+BIBIL+Tv+News",
 "e-mail":"Gabriel.news@gmail.com",
 "share":" ",
 "espnome":"esp Name " 
