--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 "politica":"https://www.jogadorcaro.online/2023/01/politica-de-privacidade-bibil-mods.html",
 "termos":"https://www.jogadorcaro.online/p/termos-de-uso.html",
 "contato":"https://wa.me/5561994346257?text=Ol%C3%A1+vi+seu+aplicativo+de+tv+%3A+BIBIL+Tv+News",
-"e-mail":"Gabriel.news@gmail.com",
+"email":"Gabriel.news@gmail.com",
 "share":" ",
 "espnome":"esp Name " 
 }
