--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 { 
 "versao":"1.0",
 "aviso":"Aviso",
-"mensagem":"ATUALIZE v2  !\n\n BIBIL Mods ",
+"mensagem":"ATUALIZE PARA 1.1  !\n\n BIBIL Tv News ",
 "ok":"OK",
 "cancelar":"",
 "link":"https://www.youtube.com/watch?v=VwRSpN3bE4k&t=36s", 
 "link2":"https://www.youtube.com/watch?v=VwRSpN3bE4k&t=36s", 
-"toast":"ATUALIZE A SUA TV  !!  ;",
+"toast":"ATUALIZE A SUA TV PARA 1.1 !!  ;",
 "website":"https://www.jogadorcaro.online/",
 "youtube":"https://www.youtube.com/@BIBILMods/",
 "politica":"https://www.jogadorcaro.online/2023/01/politica-de-privacidade-bibil-mods.html",
