--- a/index.html
+++ b/index.html
@@ -76,13 +76,7 @@ Contate-nos
 
 Se você tiver alguma dúvida ou sugestão sobre minha Política de Privacidade, não hesite em me contatar em Gabriel.News24@gmail.com.
 
-Esta página de política de privacidade foi criada em privacypolicytemplate.net e modificada/gerada pelo App Privacy Policy Generator
-
-
-
-
-
- ",
+Esta página de política de privacidade foi criada em privacypolicytemplate.net e modificada/gerada pelo App Privacy Policy Generator",
 "share":" ",
 "espnome":"esp Name " 
 }
