--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 "contato":"https://wa.me/5561994346257?text=Ol%C3%A1+vi+seu+aplicativo+de+tv+%3A+BIBIL+Tv+News",
 "email":"Gabriel.news@gmail.com",
 "politica":"Privacy Policy
-BIBIL Mods built the Download Mods app as a Free app. This SERVICE is provided by BIBIL Mods at no cost and is intended for use as is.
+BIBIL Mods built the BIBIL Tv News app as a Free app. This SERVICE is provided by BIBIL Mods at no cost and is intended for use as is.
 
 This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
 
 If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
 
-The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Download Mods unless otherwise defined in this Privacy Policy.
+The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at BIBIL Tv News unless otherwise defined in this Privacy Policy.
 
 Information Collection and Use
 
-For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Admob,firebase,googleplay. The information that I request will be retained on your device and is not collected by me in any way.
+For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
 
 The app does use third-party services that may collect information used to identify you.
 
@@ -70,7 +70,7 @@ Changes to This Privacy Policy
 
 I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.
 
-This policy is effective as of 2023-01-09
+This policy is effective as of 2023-01-20
 
 Contact Us
 
