--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 "mensagem":"ATUALIZE PARA 1.1  !\n\n BIBIL Tv News ",
 "ok":"OK",
 "cancelar":"",
-"link":"https://www.youtube.com/watch?v=VwRSpN3bE4k&t=36s", 
-"link2":"https://www.youtube.com/watch?v=VwRSpN3bE4k&t=36s", 
+"link":"https://play.google.com/store/apps/details?id=tv.gabriel.news", 
+"link2":"https://play.google.com/store/apps/details?id=tv.gabriel.news", 
 "toast":"ATUALIZE A SUA TV PARA 1.1 !!  ;",
 "website":"https://www.jogadorcaro.online/",
 "youtube":"https://www.youtube.com/channel/UC4pssZx0q58gZ-e3ifgtMjg",
