--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 [
 { 
 "versao":"1.0",
-"aviso":"Aviso",
-"mensagem":"ATUALIZE PARA 1.1  !\n\n BIBIL Tv News ",
+"aviso":"Aviso!",
+"mensagem":"ATUALIZE PARA 1.1  !\n\n BIBIL Tv Livre ",
 "ok":"OK",
 "cancelar":"",
 "link":"https://play.google.com/store/apps/details?id=tv.gabriel.news", 
